Correct some spacing errors in the header

--- a/src/components/css/blessing.css
+++ b/src/components/css/blessing.css
@@ -11,8 +11,15 @@ section {
 
 #final-download {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.download-links {
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  max-width: 760px;
 }
 
 #final-download .action-button {
